--- a/src/main/resources/templates/home/layout.html
+++ b/src/main/resources/templates/home/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-theme="pastel" lang="ko"
+<html data-theme="corporate" lang="ko"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
