feat : NotProd 파일에 Gym 객체 추가

--- a/src/main/resources/templates/gym/gym.html
+++ b/src/main/resources/templates/gym/gym.html
@@ -44,7 +44,7 @@
         <button class="btn shadow-xl m-2" style="background-color: #91c0fd;">연장하기</button>
         <button class="btn shadow-xl m-2" style="background-color: #91c0fd;">일시정지하기</button>
         <button class="btn shadow-xl m-2" style="background-color: #91c0fd;">환불신청</button>
-        <button class="btn shadow-xl m-2" style="background-color: #91c0fd;">일일권신청</button>
+        <button class="btn shadow-xl m-2" style="background-color: #91c0fd;">이용권구입</button>
     </div>
 </main>
 </body>
