--- a/src/main/resources/templates/gym/refund.html
+++ b/src/main/resources/templates/gym/refund.html
@@ -1,7 +1,7 @@
 <html layout:decorate="~{home/layout.html}">
 
 <head>
-    <title>refund</title>
+    <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">환불신청</title>
 </head>
 
 <body>
