--- a/src/main/resources/templates/home/layout.html
+++ b/src/main/resources/templates/home/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-theme="corporate" lang="ko"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -23,6 +23,9 @@
         </a>
     </div>
     <div class="navbar-end">
+        <a class="btn btn-ghost" sec:authorize="isAuthenticated()" href="javascript:"
+           onclick="$(this).next().submit();">로그아웃</a>
+        <form class="!hidden" th:action="|/account/logout|" method="POST"></form>
         <button class="btn btn-ghost btn-circle">
             <div class="indicator">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
