--- a/src/main/resources/templates/home/layout.html
+++ b/src/main/resources/templates/home/layout.html
@@ -13,7 +13,7 @@
     <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">TownForest</title>
 </head>
 <body>
-<div class="navbar bg-base-100">
+<div class="navbar bg-base-100 sticky top-0">
     <div class="navbar-start">
         <div class="btn btn-ghost btn-circle"><i class="fa-solid fa-arrow-left"></i></div>
     </div>
