--- a/src/main/resources/templates/maintenance/write.html
+++ b/src/main/resources/templates/maintenance/write.html
@@ -4,8 +4,6 @@
 </head>
 <body>
 <main layout:fragment="main" class="flex flex-col justify-start items-start flex-grow">
-
-
     <div class="w-full bg-blue-500 h-15 mt-10 flex justify-center items-center">
         <div class="flex flex-col">
             <p class="text-slate-50"><i class="fa-solid fa-circle-check"></i>
@@ -17,17 +15,19 @@
     <div class="flex justify-center mt-20 mb-3 relative w-full">
         <div class="flex flex-col">
             <h1 class="mb-4 text-xl font-bold">차량 등록</h1>
-            <input type="text"
+            <form th:action method="post" th:object="${form}">
+            <input type="text" th:field="*{name}"
                    class="w-full px-3 py-2 border rounded"
                    required placeholder="성함">
             <div class="mt-1">
-                <input type="text"
+                <input type="text" th:field="*{vehicleNumber}"
                        class="w-full px-3 py-2 border rounded"
                        required placeholder="차량번호">
             </div>
-            <button class="btn btn-neutral mt-2">등록</button>
+            <button type="submit" class="btn btn-neutral mt-2">등록</button>
         </div>
     </div>
+
 </main>
 </body>
 </html>
