--- a/src/main/resources/templates/gym/register.html
+++ b/src/main/resources/templates/gym/register.html
@@ -2,13 +2,15 @@
 
 <head>
     <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">이용권구입</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.6/datepicker.min.js"></script>
+    <link rel="stylesheet" href="/css/calender.css">
+    <script src="/js/calender.js"></script>
+    <script src="https://js.tosspayments.com/v1/payment"></script>
 </head>
 
 <body>
 
-<main layout:fragment="main" class="flex items-center justify-center h-screen">
-    <div class="w-full px-4 flex flex-col">
+<main layout:fragment="main" class="flex items-center justify-center">
+    <div class="px-4 flex flex-col">
         <div class="flex gap-2 items-center justify-center">
             <i class="fa-solid fa-ticket" style="color: #91c0fd;"></i>
             <h2 class="card-title">이용권 구입</h2>
@@ -20,21 +22,12 @@
                 <h2 class="font-bold">이용권 정보</h2>
             </div>
             <div class="form-control flex gap-2 mt-2">
-                <label class="flex items-center gap-2">
-                    <input type="checkbox" class="checkbox checkbox-primary" value="1000"/>
-                    <span class="label-text">1일권 - 1,000원</span>
-                </label>
-                <label class="flex items-center gap-2">
-                    <input type="checkbox" class="checkbox checkbox-primary" value="30000"/>
-                    <span class="label-text">30일권 - 30,000원</span>
-                </label>
-                <label class="flex items-center gap-2">
-                    <input type="checkbox" class="checkbox checkbox-primary" value="54000"/>
-                    <span class="label-text">60일권 - 54,000원(10% 할인가)</span>
-                </label>
-                <label class="flex items-center gap-2">
-                    <input type="checkbox" class="checkbox checkbox-primary" value="72000"/>
-                    <span class="label-text">90일권 - 72,000원(20% 할인가)</span>
+                <label th:each="ticket : ${gymTicketList}" class="flex items-center gap-2">
+                    <input type="checkbox" class="checkbox checkbox-primary" th:value="${ticket.type}"/>
+                    <span class="label-text" th:text="|${ticket.name} - ${#numbers.formatInteger(ticket.price, 3, 'COMMA') + '원'}|"
+                          th:value="${ticket.price}"></span>
+                    <div class="font-bold" th:if="${ticket.content != null}"
+                         th:text="${'(' + ticket.content + ')'}"></div>
                 </label>
             </div>
 
@@ -43,35 +36,49 @@
                     <i class="fa-regular fa-calendar-days" style="color: #91c0fd;"></i>
                     <h2 class="font-bold">이용 시작일 지정</h2>
                 </div>
-                <div class="relative max-w-sx mt-2">
-                    <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-                        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor"
-                             viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                  d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
-                                  clip-rule="evenodd"></path>
-                        </svg>
-                    </div>
-                    <input id="startDate" type="date"
-                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-10/12 pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                           placeholder="이용 시작일을 선택해주세요">
+                <!-- 캘린더 날짜 선택 -->
+                <div class="flex justify-center mt-2">
+                    <table class="Calendar">
+                        <thead>
+                        <tr>
+                            <td onClick="prevCalendar();" style="cursor:pointer;">&#60;</td>
+                            <td colspan="5">
+                                <span id="calYear"></span>년
+                                <span id="calMonth"></span>월
+                            </td>
+                            <td onClick="nextCalendar();" style="cursor:pointer;">&#62;</td>
+                        </tr>
+                        <tr>
+                            <td>일</td>
+                            <td>월</td>
+                            <td>화</td>
+                            <td>수</td>
+                            <td>목</td>
+                            <td>금</td>
+                            <td>토</td>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        </tbody>
+                    </table>
                 </div>
+                <input id="selectedDate" class="hidden"/>
             </div>
         </div>
-
-
         <div class="flex justify-end wrap items-center gap-2">
             <i class="fa-regular fa-circle-check" style="color: #91c0fd;"></i>
             <p>결제금액 : </p>
             <div id="payment-amount"></div>
         </div>
         <div class="flex justify-end">
-            <button class="btn shadow-xl m-2" style="background-color: #91c0fd;">결제하기</button>
+            <button id="payment-button" class="btn shadow-xl m-2" style="background-color: #91c0fd;">결제하기</button>
         </div>
+    </div>
     </div>
 
     <!-- 체크박스 선택 시 이전 선택한거 삭제 후 선택, 선택된 폰트 굵게 -->
-    <script>
+    <script th:inline="javascript">
         const checkboxes = document.querySelectorAll('.checkbox');
         const paymentAmountElement = document.getElementById('payment-amount');
 
@@ -85,12 +92,18 @@
                         }
                     });
 
+                    // 체크박스 선택된 것의 다음 요소에서 value 속성값을 가져옴
+                    const value = checkbox.nextElementSibling.getAttribute('value');
+                    // 선택된 체크박스의 글꼴을 굵게 설정
                     checkbox.nextElementSibling.classList.add('font-semibold');
-                    const paymentAmount = parseInt(checkbox.value);
+                    // 천단위 구분기호 변환 + 원 붙여주고 글꼴 굵게
+                    const paymentAmount = parseInt(value);
                     const formattedPaymentAmount = paymentAmount.toLocaleString();
                     paymentAmountElement.textContent = formattedPaymentAmount + '원';
                     paymentAmountElement.classList.add('font-semibold');
-                } else {
+                }
+                // 체크박스 선택이 풀렸을 떄
+                else {
                     checkbox.nextElementSibling.classList.remove('font-semibold');
                     paymentAmountElement.textContent = '';
                     paymentAmountElement.classList.remove('font-semibold');
