--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -35,7 +35,7 @@
         }
     </script>
 
-    <div class="max-w-2xl w-full px-5">
+    <div class="max-w-2xl w-full px-10">
         <h1 class="text-center text-2xl font-bold mb-10">로그인</h1>
 
         <form th:action method="POST" class="flex flex-col gap-6" onsubmit="LoginForm__submit(this); return false;">
@@ -59,7 +59,7 @@
             </button>
         </form>
         <div class="flex justify-center">
-            <a href="#" class="btn btn-link !text-gray-500 gap-2">
+            <a href="/account/join" class="btn btn-link !text-gray-500 gap-2">
                 <i class="fa-solid fa-user"></i>
                 <span>회원가입 신청</span></a>
         </div>
