--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -60,7 +60,7 @@
                 class="btn btn-outline btn-primary">
             헬스장 신청
         </button>
-        <button id="library"
+        <button id="library" onclick="javascript: window.location.href='/library/booking';"
                 class="btn btn-outline btn-primary">
             독서실 자리 예약
         </button>
