--- a/src/main/resources/templates/account/join.html
+++ b/src/main/resources/templates/account/join.html
@@ -1,6 +1,7 @@
 <html layout:decorate="~{home/layout.html}">
 <head>
     <title>회원 가입</title>
+    <link rel="stylesheet" href="/css/account.css">
 </head>
 <body>
 <main layout:fragment="main" class="flex-grow flex items-center justify-center">
@@ -248,33 +249,6 @@
             </div>
         </div>
     </div>
-    <style>
-        label:not(.exclusion .label) {
-            top: 0;
-            transform: translateY(-50%);
-            font-size: 11px;
-            color: rgba(37, 99, 235, 1);
-        }
-
-        .empty input:not(:focus) + label:not(.exclusion .label) {
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 14px;
-        }
-
-        input:not(:focus) + label:not(.exclusion .label) {
-            color: rgba(70, 70, 70, 1);
-        }
-
-        input {
-            border-width: 1px;
-        }
-
-        input:focus {
-            outline: none;
-            border-color: rgba(37, 99, 235, 1);
-        }
-    </style>
     <script>
         const allInputs = document.querySelectorAll('input');
         for (const input of allInputs) {
