--- a/src/main/resources/templates/account/join.html
+++ b/src/main/resources/templates/account/join.html
@@ -1,7 +1,7 @@
 <html layout:decorate="~{home/layout.html}">
 <head>
     <title>회원 가입</title>
-    <link rel="stylesheet" href="/css/account.css">
+    <link rel="stylesheet" href="/css/form-styles.css">
 </head>
 <body>
 <main layout:fragment="main" class="flex-grow flex items-center justify-center">
