feat : 아파트 선택 창 클릭 시에도 목록 보이게 설정

--- a/src/main/resources/templates/aptAccount/register.html
+++ b/src/main/resources/templates/aptAccount/register.html
@@ -104,6 +104,12 @@
                 document.querySelector("#show_more").checked = false;
             });
         });
+
+        const inputSelect2 = document.querySelector("#select");
+        const checkboxToggle = () => {
+            document.querySelector("#show_more").checked = !document.querySelector("#show_more").checked;
+        };
+        inputSelect2.addEventListener("click", checkboxToggle);
     </script>
 </main>
 </body>
