feat : 임의의 데이터를 view에 출력

--- a/src/main/resources/templates/maintenance/write.html
+++ b/src/main/resources/templates/maintenance/write.html
@@ -24,7 +24,9 @@
                        class="w-full px-3 py-2 border rounded"
                        required placeholder="차량번호">
             </div>
-            <button type="submit" class="btn btn-neutral mt-2">등록</button>
+                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mt-4 ml-16 rounded">
+                    등록
+                </button>
         </div>
     </div>
 
