--- a/src/main/resources/templates/maintenance/vehicle.html
+++ b/src/main/resources/templates/maintenance/vehicle.html
@@ -27,7 +27,7 @@
                 아직 등록된 차량이 없어요
             </div>
             <div class="my-6 flex justify-center">
-                <a role="button" class="btn btn-neutral" th:href="@{/maintenance/write}">추가등록</a>
+                <a role="button" class="btn btn-neutral" th:href="@{/maintenance/add}">추가등록</a>
             </div>
         </div>
     </div>
