feat : 이용권 연장하기 기능 구현

--- a/src/main/resources/templates/gym/locker.html
+++ b/src/main/resources/templates/gym/locker.html
@@ -11,6 +11,12 @@
         <div class="text-center flex wrap items-center gap-2">
             <i class="fa-regular fa-face-grin-beam-sweat"></i>
             <p>락커는 현재 준비중입니다</p>
+            <div class="flex gap-2 mt-2">
+                <div class="btn btn-primary" onclick="javascript: window.location.href='/';">
+                    홈으로
+                </div>
+                <div class="btn btn-primary" onclick="javascript: window.location.href='/gym';"> 헬스장메인으로</div>
+            </div>
         </div>
     </div>
 </main>
