--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -57,8 +57,8 @@
     <!-- 버튼메뉴 -->
     <div class="flex justify-center flex-wrap gap-3">
         <button id="gym"
-                class="btn btn-outline btn-primary">
-            헬스장 신청
+                class="btn btn-outline btn-primary" onclick="javascript: window.location.href='/gym';">
+            헬스장 이용 현황
         </button>
         <button id="library" onclick="javascript: window.location.href='/library/booking';"
                 class="btn btn-outline btn-primary">
