--- a/src/main/resources/templates/gym/register.html
+++ b/src/main/resources/templates/gym/register.html
@@ -1,7 +1,8 @@
 <html layout:decorate="~{home/layout.html}">
 
 <head>
-    <title layout:title-pattern="$CONTENT_TITLE | $LAYOUT_TITLE">이용권구입</title>
+    <title th:if="${membership ==null}">이용권 구입</title>
+    <title th:if="${membership !=null}">이용권 연장</title>
     <link rel="stylesheet" href="/css/calender.css">
     <script src="/js/calender.js"></script>
     <script src="https://js.tosspayments.com/v1/payment"></script>
@@ -14,7 +15,8 @@
     <div class="px-4 flex flex-col">
         <div class="flex gap-2 items-center justify-center">
             <i class="fa-solid fa-ticket" style="color: #91c0fd;"></i>
-            <h2 class="card-title">이용권 구입</h2>
+            <h2 class="card-title" th:if="${membership ==null}">이용권 구입</h2>
+            <h2 class="card-title" th:if="${membership !=null}">이용권 연장</h2>
         </div>
 
         <div class="card-body bg-base-100 shadow-xl m-2 mt-4">
@@ -42,7 +44,7 @@
                 </div>
                 <!-- 캘린더 날짜 선택 -->
                 <div class="flex justify-center mt-2">
-                    <table class="Calendar">
+                    <table class="Calendar" th:if="${membership ==null}">
                         <thead>
                         <tr>
                             <td onClick="prevCalendar();" style="cursor:pointer;">&#60;</td>
@@ -67,7 +69,9 @@
                         </tbody>
                     </table>
                 </div>
-                <input id="selectedDate" class="hidden" name="startDate"/>
+                <input id="selectedDate" class="hidden" th:if="${membership ==null}" name="startDate"/>
+                <input id="selectedDate2" th:if="${membership !=null}" th:value="${membership.endDate.plusDays(1)}"/>
+
             </div>
         </div>
 
@@ -122,11 +126,17 @@
         var tossPayments = TossPayments("test_ck_lpP2YxJ4K877wRwQ1Lp8RGZwXLOb");
         var button = document.getElementById("payment-button");
 
-        var orderId = new Date().getTime();
-
         button.addEventListener("click", function () {
             var checkedCheckbox = document.querySelector('.checkbox:checked');
-            var selectedDate = document.getElementById("selectedDate").value; // 시작일
+
+            var selectedDate = null;
+            var selectedDate2 = document.getElementById("selectedDate2").value; // 시작일
+
+            if (selectedDate2 == null) {
+                selectedDate = document.getElementById("selectedDate").value;
+            } else {
+                selectedDate = new Date(selectedDate2);
+            }
 
             // 체크박스 선택 검증
             if (!checkedCheckbox) {
