--- a/src/main/resources/templates/home/layout.html
+++ b/src/main/resources/templates/home/layout.html
@@ -21,7 +21,9 @@
 <body>
 <div class="navbar bg-base-100 sticky top-0">
     <div class="navbar-start">
-        <div class="btn btn-ghost btn-circle"><i class="fa-solid fa-arrow-left"></i></div>
+        <div class="btn btn-ghost btn-circle" onclick="javascript: window.history.back();">
+            <i class="fa-solid fa-arrow-left"></i>
+        </div>
     </div>
     <div class="navbar-center">
         <a class="btn-link normal-case text-xl" href="/">
