feat: 관리자 main 페이지 작성

--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{home/layout.html}">
 <head>
-    <title>관리자 메뉴</title>
+    <title>관리자</title>
     <style>
         button.btn.btn-outline.btn-primary {
             width: 174px;
