refactor : 불필요 model 속성 제거, 권한 조회 로직 수정, view table 크기 조절

--- a/src/main/resources/templates/gym/register.html
+++ b/src/main/resources/templates/gym/register.html
@@ -71,7 +71,7 @@
                 </div>
                 <input id="selectedDate" class="hidden" th:if="${membership ==null}" name="startDate"/>
                 <input id="selectedDate2" th:if="${membership !=null}" th:value="${membership.endDate.plusDays(1)}"/>
-
+                <div th:if="${membership !=null}"> ※ 기존 이용권 종료일 다음날로 자동 선택됩니다. </div>
             </div>
         </div>
 
