--- a/src/main/resources/templates/gym/locker.html
+++ b/src/main/resources/templates/gym/locker.html
@@ -8,9 +8,11 @@
 
 <main layout:fragment="main">
     <div class="flex items-center justify-center h-screen">
-        <div class="text-center flex wrap items-center gap-2">
-            <i class="fa-regular fa-face-grin-beam-sweat"></i>
-            <p>락커는 현재 준비중입니다</p>
+        <div class="text-center flex-col wrap items-center gap-2">
+            <div class="flex items-center gap-2">
+                <i class="fa-regular fa-face-grin-beam-sweat"></i>
+                <p>락커는 현재 준비중입니다</p>
+            </div>
             <div class="flex gap-2 mt-2">
                 <div class="btn btn-primary" onclick="javascript: window.location.href='/';">
                     홈으로
