refactor : prod.yml 수정

--- a/src/main/resources/templates/gym/gym.html
+++ b/src/main/resources/templates/gym/gym.html
@@ -94,7 +94,7 @@
         </button>
         <!-- 이용내역 기능 구현 필요 -->
         <button class="btn shadow-xl m-2" style="background-color: #91c0fd;"
-                onclick="javascript: window.location.href='/gym/history';">이용내역
+                onclick="javascript: window.location.href='/gym/history';">이용권 결제 내역
         </button>
     </div>
 </main>
