--- a/src/main/resources/templates/gym/history.html
+++ b/src/main/resources/templates/gym/history.html
@@ -1,7 +1,7 @@
 <html layout:decorate="~{home/layout.html}">
 
 <head>
-    <title>구입 내역</title>
+    <title>결제 내역</title>
 </head>
 
 <body>
@@ -32,12 +32,15 @@
                             <tr class="text-center" th:each="gymHistory, loop : ${paging}">
                                 <!-- 1번 ~ 증가하는 식으로 순번 표시 -->
                                 <td th:text="${(paging.number * paging.size) + loop.index +1}">
-                                <td th:text="${#temporals.format(gymHistory.paymentDate, 'yy-MM-dd')}"></td>
-                                <td th:text="${#temporals.format(gymHistory.startDate, 'yy-MM-dd')}"></td>
-                                <td th:text="${#temporals.format(gymHistory.endDate, 'yy-MM-dd')}"></td>
+                                <td th:text="${#temporals.format(gymHistory.paymentDate, 'yy-MM-dd')}"
+                                    style="min-width:40px; padding: 12px 0;"></td>
+                                <td th:text="${#temporals.format(gymHistory.startDate, 'yy-MM-dd')}"
+                                    style="min-width:40px; padding: 12px 0;"></td>
+                                <td th:text="${#temporals.format(gymHistory.endDate, 'yy-MM-dd')}"
+                                    style="min-width:40px; padding: 12px 0;"></td>
                                 <td th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}"></td>
-                                <td th:if="${gymHistory.status==0}">결제</td>
-                                <td th:if="${gymHistory.status==1}">연장</td>
+                                <td th:if="${gymHistory.status==0}" style="min-width:40px; padding: 12px 0;">결제</td>
+                                <td th:if="${gymHistory.status==1}" style="min-width:40px; padding: 12px 0;">연장</td>
                             </tr>
                             </tbody>
                         </table>
