--- a/src/main/resources/templates/aptAccount/awaiting_approval.html
+++ b/src/main/resources/templates/aptAccount/awaiting_approval.html
@@ -8,7 +8,7 @@
     <div class="max-w-2xl w-full px-8 mt-5">
         <div class="flex justify-center items-center">
             <div class="flex max-w-sm w-full justify-center bg-white shadow-md rounded-lg overflow-hidden mx-auto flex flex-col p-5">
-                <h3 class="text-center text-xl font-bold mb-3">관리자 승인이 완료되지 않았습니다.</h3>
+                <h3 class="text-center text-xl font-bold mb-3">아파트 등록 요청을 완료했습니다.</h3>
                 <p class="text-primary text-center my-3">
                     관리자가 등록을 확인하고 승인하는 데<br>
                     최대 7일이 걸릴 수 있음을 알려드립니다.<br>
